--- a/index.html
+++ b/index.html
@@ -5,90 +5,13 @@
   <meta charset="UTF-8">
   <title>Lista telefônica</title>
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
-  <style>
-    .jumbotron {
-      width: 900px;
-      margin-top: 30px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .table {
-      margin-top: 20px;
-    }
-
-    h2 {
-      margin-bottom: 70px;
-      text-align: center;
-    }
-
-    .form-control {
-      margin-bottom: 10px;
-    }
-
-    button {
-      height: 40px;
-    }
-
-    .selecionado {
-      background-color: rgb(231, 231, 44);
-    }
-
-    .negrito {
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="/lib/angular/angular.js"></script>
-  <script>
-    const app = angular.module('listaTelefonica', [])
-    app.controller('listaTelefonicaCtrl', function ($scope, $http) {
-      $scope.app = 'Lista Telefonica'
-      const loadContacts = () => {
-        $http.get("http://localhost:3412/contatos").then((data) => {
-          $scope.contacts = data.data
-        })
-      }
-      const loadOps = () => {
-        $http.get("http://localhost:3412/operadoras").then((data) => {
-          $scope.ops = data.data
-        })
-      }
-      $scope.contacts = [];
-      $scope.addContact = contact => {
-        contact.date = new Date()
-        $http.post("http://localhost:3412/contatos", contact).then((data) => {
-          delete $scope.contact;
-          $scope.contactForm.$setPristine();
-          loadContacts();
-        })
-      }
-      $scope.deleteContact = (contact) => {
-        $scope.contacts = $scope.contacts.filter((contact) => {
-          if (!contact.select) return contact
-        })
-      }
-      $scope.isContactSelected = (contacts) => {
-        return contacts.some(contact => {
-          return contact.select
-        })
-      }
-      $scope.alertMsg = () => {
-        alert('Olá, undefined!')
-      }
-      $scope.addUser = () => {
-        alert('Add some users!')
-      }
-      $scope.orderBy = (field) => {
-        $scope.orderFilter = field
-        $scope.direction = !$scope.direction
-      }
-      $scope.ops = []
-
-      loadContacts();
-      loadOps();
-    })
-
-  </script>
+  <script src="/backend/app.js"></script>
+  <script src="/backend/controller/listaTelefonicaCTRL.js"></script>
+  <script src="/backend/services/contatosAPIService.js"></script>
+  <script src="/backend/services/operatorsAPIService.js"></script>
+  <script src="/backend/baseURL.js"></script>
 </head>
 
 <body ng-controller='listaTelefonicaCtrl'>
@@ -171,7 +94,7 @@
     <div ng-show="contactForm.phone.$error.pattern" class="alert alert-danger">
       The field phone must be at the format DDDDD-DDDD.
     </div>
-    <div ng-include="'footer.html'"></div>
+    <div ng-include="'view/footer.html'"></div>
 </body>
 
 </html>
