mudança para o mac

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Lista telefônica</title>
-  <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="/lib/bootstrap/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   <script src="/lib/angular/angular.js"></script>
   <script src="/backend/app.js"></script>
   <script src="/backend/controller/listaTelefonicaCTRL.js"></script>
