routes and requests

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,9 @@
   <script src="lib/angular/angular-route.js"></script>
    <!-- <script src="js/bootstrap.min.js"></script> -->
    <script src="app.js"></script>
-   <script src="controllers/loginPageCtrl.js"></script> 
-   <script src="services/loginPageServices.js"></script>
+   <script src="controllers/userCtrl.js"></script> 
+   <script src="controllers/menuPageCtrl.js"></script>
+   <script src="services/userServices.js"></script>
    <script src="config/routeConfig.js"></script> 
   <script src="config/baseUrl.js"></script>
 </head>
