--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,10 @@
    <!-- <script src="js/bootstrap.min.js"></script> -->
    <script src="app.js"></script>
    <script src="controllers/userCtrl.js"></script> 
-   <script src="controllers/menuPageCtrl.js"></script>
+   <script src="controllers/menuCtrl.js"></script>
+   <script src="controllers/loginCtrl.js"></script>
    <script src="services/userServices.js"></script>
+   <script src="services/loginServices.js"></script>
    <script src="config/routeConfig.js"></script> 
   <script src="config/baseUrl.js"></script>
 </head>
