--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,9 @@
    <script src="services/loginServices.js"></script>
    <script src="config/routeConfig.js"></script> 
   <script src="config/baseUrl.js"></script>
+  <script src="./config/interceptorConfig.js"></script>
+  <script src="./interceptors/getTokenInt.js"></script>
+  <script src="./interceptors/timePassedInt.js"></script>
 </head>
 
 <body ng-app="escolinha">
