--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,10 @@
    <script src="controllers/userCtrl.js"></script> 
    <script src="controllers/menuCtrl.js"></script>
    <script src="controllers/loginCtrl.js"></script>
+   <script src="controllers/studentCtrl.js"></script>
    <script src="services/userServices.js"></script>
    <script src="services/loginServices.js"></script>
+   <script src="services/studentServices.js"></script>
    <script src="config/routeConfig.js"></script> 
   <script src="config/baseUrl.js"></script>
   <script src="./config/interceptorConfig.js"></script>
