--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,9 +13,11 @@
    <script src="controllers/menuCtrl.js"></script>
    <script src="controllers/loginCtrl.js"></script>
    <script src="controllers/studentCtrl.js"></script>
+   <script src="controllers/photoCtrl.js"></script>
    <script src="services/userServices.js"></script>
    <script src="services/loginServices.js"></script>
    <script src="services/studentServices.js"></script>
+   <script src="services/photoServices.js"></script>
    <script src="config/routeConfig.js"></script> 
   <script src="config/baseUrl.js"></script>
   <script src="./config/interceptorConfig.js"></script>
@@ -25,5 +27,6 @@
 
 <body ng-app="escolinha">
   <div ng-view></div>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
