ajeitar a foto no back

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,8 @@
   <script src="./config/interceptorConfig.js"></script>
   <script src="./interceptors/getTokenInt.js"></script>
   <script src="./interceptors/timePassedInt.js"></script>
+  <script src="./directives/fileSelectDirective.js"></script>
+  <script src="./services/uploadService.js"></script>
 </head>
 
 <body ng-app="escolinha">
