terminar a parte de update da foto

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
    <script src="controllers/loginCtrl.js"></script>
    <script src="controllers/studentCtrl.js"></script>
    <script src="controllers/photoCtrl.js"></script>
+   <script src="controllers/photoChangeCtrl.js"></script>
    <script src="services/userServices.js"></script>
    <script src="services/loginServices.js"></script>
    <script src="services/studentServices.js"></script>
