--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,27 +9,17 @@
   <script src="lib/angular/angular-route.js"></script>
    <!-- <script src="js/bootstrap.min.js"></script> -->
    <script src="app.js"></script>
-   <script src="controllers/userCtrl.js"></script> 
    <script src="controllers/menuCtrl.js"></script>
-   <script src="controllers/loginCtrl.js"></script>
-   <script src="controllers/studentCtrl.js"></script>
-   <script src="controllers/photoCtrl.js"></script>
-   <script src="controllers/photoChangeCtrl.js"></script>
-   <script src="services/userServices.js"></script>
-   <script src="services/loginServices.js"></script>
-   <script src="services/studentServices.js"></script>
-   <script src="services/photoServices.js"></script>
+   <script src="services/fornecedorServices.js"></script>
    <script src="config/routeConfig.js"></script> 
   <script src="config/baseUrl.js"></script>
-  <script src="./config/interceptorConfig.js"></script>
-  <script src="./interceptors/getTokenInt.js"></script>
-  <script src="./interceptors/timePassedInt.js"></script>
-  <script src="./directives/fileSelectDirective.js"></script>
-  <script src="./services/uploadService.js"></script>
 </head>
 
-<body ng-app="escolinha">
+<body ng-app="Ecommerce">
   <div ng-view></div>
+
+  <input type="text" ng-model="" ng-blur="consultCep()">
+
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
