tela de menu quase concluida

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,8 +17,7 @@
 
 <body ng-app="Ecommerce">
   <div ng-view></div>
-
-  <input type="text" ng-model="" ng-blur="consultCep()">
+  <!-- <input type="text" ng-model="" ng-blur="consultCep()"> -->
 
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
