--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,18 +7,29 @@
   <link rel="stylesheet" href="myCss/style.css">
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
-   <!-- <script src="js/bootstrap.min.js"></script> -->
-   <script src="app.js"></script>
-   <script src="controllers/menuCtrl.js"></script>
-   <script src="services/fornecedorServices.js"></script>
-   <script src="config/routeConfig.js"></script> 
+  <!-- <script src="js/bootstrap.min.js"></script> -->
+  <script src="app.js"></script>
+  <script src="controllers/menuCtrl.js"></script>
+  <script src="controllers/fornecedorCtrl.js"></script>
+  <script src="services/fornecedorServices.js"></script>
+  <script src="services/cepService.js"></script>
+  <script src="config/routeConfig.js"></script>
   <script src="config/baseUrl.js"></script>
 </head>
 
 <body ng-app="Ecommerce">
   <div ng-view></div>
   <!-- <input type="text" ng-model="" ng-blur="consultCep()"> -->
-
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+
 </html>
