--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="myCss/style.css">
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
+  <script src="lib/angular/ngMask.min.js"></script>
+  <script src="lib/angular/ngMask.min.map"></script>
   <!-- <script src="js/bootstrap.min.js"></script> -->
   <script src="app.js"></script>
   <script src="controllers/menuCtrl.js"></script>
@@ -15,11 +17,10 @@
   <script src="services/cepService.js"></script>
   <script src="config/routeConfig.js"></script>
   <script src="config/baseUrl.js"></script>
-</head>
+</head> 
 
 <body ng-app="Ecommerce">
   <div ng-view></div>
-  <!-- <input type="text" ng-model="" ng-blur="consultCep()"> -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
