--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,10 +9,13 @@
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/ngMask.min.js"></script>
   <script src="lib/angular/ngMask.min.map"></script>
+  <script src="lib/angular/angular-locale_pt-br.js"></script>
   <!-- <script src="js/bootstrap.min.js"></script> -->
   <script src="app.js"></script>
   <script src="controllers/menuCtrl.js"></script>
   <script src="controllers/fornecedorCtrl.js"></script>
+  <script src="controllers/produtoCtrl.js"></script>
+  <script src="services/produtoService.js"></script>
   <script src="services/fornecedorServices.js"></script>
   <script src="services/cepService.js"></script>
   <script src="config/routeConfig.js"></script>
