--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,9 +15,11 @@
   <script src="controllers/menuCtrl.js"></script>
   <script src="controllers/fornecedorCtrl.js"></script>
   <script src="controllers/produtoCtrl.js"></script>
+  <script src="controllers/pedidoCtrl.js"></script>
   <script src="services/produtoService.js"></script>
   <script src="services/fornecedorServices.js"></script>
   <script src="services/cepService.js"></script>
+  <script src="services/pedidoService.js"></script>
   <script src="config/routeConfig.js"></script>
   <script src="config/baseUrl.js"></script>
 </head> 
